# bookagent

./: .env.example  .gitignore  Dockerfile.dev  GETTING_STARTED.md  README.md  alembic.ini  check_system.py  docker-compose.yml  final_test.py  fix_frontend.py  pyproject.toml  quick_start.py  requirements.txt  simple_main.py  simple_main_clean.py  simple_main_fixed.py  smart_start.py  start-frontend.bat  start-frontend.sh  start.bat  start.py  start.sh  start_backend_only.bat  start_backend_only.py  test_backend.py  test_system.py  test_table_generation.py  前端问题解决方案.md  启动成功总结.md  启动问题解决方案.md  快速开始.md  系统优化总结.md
alembic/: env.py
bookagent/: __init__.py  alembic.ini  main.py
bookagent/app/: __init__.py
bookagent/app/api/: __init__.py  ai.py  auth.py  books.py  chapters.py  deps.py  tasks.py  templates.py  users.py
bookagent/app/api/endpoints/: ai.py
bookagent/app/core/: cache.py  config.py  database.py  init_app.py  llm.py  security.py  tasks.py
bookagent/app/models/: __init__.py  base.py  book.py  chapter.py  template.py  user.py
bookagent/app/schemas/: __init__.py  ai.py  base.py  book.py  chapter.py  task.py  template.py  token.py  user.py
bookagent/app/services/: ai_service.py  diagram_service.py  export_service.py  visual_content_service.py
bookagent/app/static/: index.html
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/create/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/editor/[id]/: page.tsx
scripts/: init_db.py
tests/: test_ai_service.py
